syntax = "proto3";

import "core/core.proto";
import "plato/generic.proto";
import "plato/object.proto";
import "validate/validate.proto";

package plato;

option go_package = "plato/api/proto";

service PlatoAnswerCategoriesService {
  rpc GetAnswerCategoryById(AnswerCategoryIdRequest) returns (AnswerCategoryResponse) {}
  rpc ListAnswerCategoriesByAnswerId(AnswerIdRequest) returns (ListAnswerCategoriesResponse) {}
  rpc InsertAnswerCategory(InsertAnswerCategoryRequest) returns (AnswerCategoryResponse) {}
  rpc UpdateAnswerCategory(UpdateAnswerCategoryRequest) returns (AnswerCategoryResponse) {}
  rpc DeleteAnswerCategory(AnswerCategoryIdRequest) returns (GenericResponse) {}
}

message ListAnswerCategoriesResponse {
  BaseResponse   base = 1;
  repeated AnswerCategory answerCategories = 2;
}

message AnswerCategoryResponse {
  BaseResponse base = 1;
  AnswerCategory answerCategory = 2;
}

message InsertAnswerCategoryRequest{
  BaseRequest base = 1 [(validate.rules).message.required = true];
  string name= 2;
  string type = 3;
  string value = 4;

  uint64 answer_id = 6;
}

message UpdateAnswerCategoryRequest{
  BaseRequest base = 1 [(validate.rules).message.required = true];
  optional string name= 2;
  optional string type = 3;
  optional string value = 4;

  uint64 answer_category_id = 5;
}
